zmieniłem kolor napisów

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 h1 {
     font-size: 60px;
+    color: #6e492f;
 }
 
 nav a {
     font-size: 50px;
+    color: #6e492f;
+}
+h2 {
+    color: #6e492f;
 }
